Remove min-height rules that can cause content overlap at mobile Fix bug https://bugzilla.redhat.com/show_bug.cgi?id=1787623
And prevent details page action dropdown menu from being positioned incorrectly

--- a/frontend/public/components/_nav-title.scss
+++ b/frontend/public/components/_nav-title.scss
@@ -1,4 +1,5 @@
 .co-actions {
+  align-items: flex-start; // Keep dropdown menu positioned correctly when titles wrap
   display: flex;
   @media(max-width: $screen-xs){
     align-items: flex-end;
@@ -25,14 +26,10 @@
   }
   &--detail {
     border-bottom: 1px solid $color-grey-background-border;
-    // Set min-height to prevent shifting of page content when actions btn is rendered after page content
-    min-height: 90px; // h1 text + top & bottom margin + bottom border (29 + 30 + 30 + 1)
     flex-shrink: 0; // do not allow to shrink
   }
   // Positioned after --detail to take precedence, since they will be a siblings
   &--breadcrumbs {
-    // Set min-height to prevent shifting of page content when actions btn is rendered after page content
-    min-height: 118px; // breadcrumb text + top & bottom padding + h1 text + bottom margin + bottom border +  (21 + 25 + 12 + 29 + 30 + 1)
     padding-top: 0;
   }
 }
